# binary-install

./: README.md  package-lock.json  package.json
.github/workflows/: lint.yml  release_rust.yml  test.yml  test_rust.yml
example/: package.json
example-binary/: Cargo.toml
example-binary/src/: main.rs
example-binary/tests/: c.rs
examples/rust/npm/: binary.js  install.js  package-lock.json  package.json  run.js  uninstall.js
examples/rust/tests/e2e/: package-lock.json  package.json
src/: binary.js
