[package]
name = "binary-install-example"
version = "1.0.0"
authors = ["Wrangler Team <wrangler@cloudflare.com>"]
edition = "2018"
description = "An example binary to test out https://npmjs.com/package/binary-install"
homepage = "https://npmjs.com/package/binary-install"
repository = "https://github.com/cloudflare/binary-install"

[dependencies]
clap = "2.33.0"
console = "0.10.0"

[dev-dependencies]
assert_cmd = "0.12.0"
predicates = "1.0.4"
